--- a/index.html
+++ b/index.html
@@ -63,15 +63,18 @@
     <div class="row">
       <div class="col-md-4 text-center">
         <img src="images/profile.jpg" alt="Zafaryab Haider" class="img-fluid about-photo mb-3">
+        <h3>Zafaryab Haider</h3>
+        <p class="text-muted">Ph.D. Student in Electrical and Computer Engineering<br>University of Maine, Orono, USA</p>
+        <p class="mt-3">
+          <i class="fas fa-envelope me-2"></i>
+          <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a>
+        </p>
         <div class="social-icons">
           <a href="https://linkedin.com/in/zafaryab" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href="https://www.instagram.com/zhaider_lens/" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://facebook.com/zaffuyab" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
-        <p class="mt-3">
-          <i class="fas fa-envelope me-2"></i>
-          <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a>
-        </p>
+        
       </div>
       <div class="col-md-8">
         <h1 class="display-5">Hi, I'm Zafaryab</h1>
