--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="col-md-4 text-center">
         <img src="images/profile.jpg" alt="Zafaryab Haider" class="img-fluid about-photo mb-3">
         <h3>Zafaryab Haider</h3>
-        <p class="text-muted">Research Candidate in Electrical and Computer Engineering<br>University of Maine, Orono, USA</p>
+        <p class="text-muted">Research Candidate in Electrical and Computer Engineering | Graduate AI Consultant<br>University of Maine, Orono, USA</p>
         <p class="mt-3">
           <i class="fas fa-envelope me-2"></i>
           <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a>
@@ -77,9 +77,9 @@
         
       </div>
       <div class="col-md-8">
-        <h1 class="display-5">Hi, I'm Zafaryab</h1>
+        <h1 class="display-5">Assalamoalaikum</h1>
           <p class="lead">
-            I’m a Ph.D. scholar in Electrical and Computer Engineering at the University of Maine, where I explore the intersections of AI, security, and embedded systems. I bring over a decade of teaching and research experience, with a strong academic foundation in Computer Science and Software Engineering.
+            I’m a Research Candidate in Electrical and Computer Engineering at the University of Maine, where I explore the intersections of AI, security, and embedded systems. I bring over a decade of teaching and research experience, with a strong academic foundation in Computer Science and Software Engineering.
           </p>
           <p>
             After completing my B.Tech. in Computer Science and Engineering (2011) and M.Tech. in Software Engineering (2013) with honors, I joined the Department of Computer Engineering at Zakir Husain College of Engineering and Technology (ZHCET), Aligarh Muslim University. As an Assistant Professor and Incharge of the Interactive Instructional Resource Unit, I spent several years shaping the academic and research environment.
