--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <img src="images/profile.jpg" alt="Zafaryab Haider" class="img-fluid about-photo mb-3">
         <h3>Zafaryab Haider</h3>
         <p class="text-muted">Research Candidate in Electrical and Computer Engineering | Graduate AI Consultant<br>University of Maine, Orono, USA</p>
-        <p class="text-muted">Assistan Professor in Zakir husain College of Engineering nad Technology<br>Aligarh Muslim University, UP, India</p>
+        <p class="text-muted">Assistan Professor in Zakir husain College of Engineering & Technology<br>Aligarh Muslim University, UP, India</p>
         <p class="mt-3">
           <i class="fas fa-envelope me-2"></i>
           <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a>
