--- a/index.html
+++ b/index.html
@@ -171,18 +171,28 @@
     </div>
   </section>
 
-  <footer class="text-center py-4 bg-dark text-white">
-    <p class="mt-3">
-          <i class="fas fa-envelope me-2"></i>
-          <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a>
-        </p>
-        <div class="social-icons">
-          <a href="https://linkedin.com/in/zafaryab" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://www.instagram.com/zhaider_lens/" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://facebook.com/zaffuyab" target="_blank"><i class="fab fa-facebook"></i></a>
-        </div>
-    <p>&copy; 2025 Zafaryab. All rights reserved.</p>
-  </footer>
+<footer class="bg-dark text-white text-center py-4">
+  <div class="container">
+    <p class="mb-1">&copy; 2025 Zafaryab. All rights reserved.</p>
+    <p class="mb-1">
+      <i class="fas fa-envelope me-2"></i>
+      <a href="mailto:zafaryab.haider@maine.edu" class="text-white text-decoration-none">zafaryab.haider@maine.edu</a>
+    </p>
+    <p class="mb-1">
+      <i class="fas fa-phone me-2"></i>
+      <a href="tel:+12077190411" class="text-white text-decoration-none">+1 207 719 0411</a>
+    </p>
+    <p class="mb-1">
+      <i class="fas fa-map-marker-alt me-2"></i> Orono, Maine, USA
+    </p>
+    <div class="mt-2">
+      <a href="https://linkedin.com/in/zafaryab" target="_blank" class="text-white mx-2"><i class="fab fa-linkedin fa-lg"></i></a>
+      <a href="https://instagram.com/yourhandle" target="_blank" class="text-white mx-2"><i class="fab fa-instagram fa-lg"></i></a>
+      <a href="https://facebook.com/yourprofile" target="_blank" class="text-white mx-2"><i class="fab fa-facebook fa-lg"></i></a>
+    </div>
+  </div>
+</footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
