--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h3>Zafaryab Haider</h3>
         <p class="text-muted">Research Candidate in Electrical and Computer Engineering | Graduate AI Consultant<br>University of Maine, Orono, USA</p>
         <p class="text-muted">Assistan Professor in Zakir Husain College of Engineering & Technology<br>Aligarh Muslim University, UP, India</p>
-        <p class="mt-3">
+<!--         <p class="mt-3">
           <i class="fas fa-envelope me-2"></i>
           <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a>
         </p>
@@ -74,7 +74,7 @@
           <a href="https://linkedin.com/in/zafaryab" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href="https://www.instagram.com/zhaider_lens/" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://facebook.com/zaffuyab" target="_blank"><i class="fab fa-facebook"></i></a>
-        </div>
+        </div> -->
         
       </div>
       <div class="col-md-8">
