--- a/index.html
+++ b/index.html
@@ -171,27 +171,16 @@
     </div>
   </section>
 
-<footer class="bg-dark text-white text-center py-4">
-  <div class="container">
-    <p class="mb-1">&copy; 2025 Zafaryab. All rights reserved.</p>
-    <p class="mb-1">
-      <i class="fas fa-envelope me-2"></i>
-      <a href="mailto:zafaryab.haider@maine.edu" class="text-white text-decoration-none">zafaryab.haider@maine.edu</a>
-    </p>
-    <p class="mb-1">
-      <i class="fas fa-phone me-2"></i>
-      <a href="tel:+12077190411" class="text-white text-decoration-none">719 0411</a>
-    </p>
-    <p class="mb-1">
-      <i class="fas fa-map-marker-alt me-2"></i> Orono, Maine, USA
-    </p>
-    <div class="mt-2">
-      <a href="https://linkedin.com/in/zafaryab" target="_blank" class="text-white mx-2"><i class="fab fa-linkedin fa-lg"></i></a>
-      <a href="https://instagram.com/zhaider_lens" target="_blank" class="text-white mx-2"><i class="fab fa-instagram fa-lg"></i></a>
-      <a href="https://facebook.com/zaffuyab" target="_blank" class="text-white mx-2"><i class="fab fa-facebook fa-lg"></i></a>
-    </div>
-  </div>
-</footer>
+<!-- footer -->
+<div id="footer-placeholder"></div>
+<script>
+  fetch("footer.html")
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById("footer-placeholder").innerHTML = data;
+    });
+</script>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
