--- a/photography.html
+++ b/photography.html
@@ -43,9 +43,16 @@
     </div>
   </section>
 
-  <footer class="text-center py-4 bg-dark text-white">
-    <p>&copy; 2025 Zafaryab. All rights reserved.</p>
-  </footer>
+  <!--   footer -->
+  <div id="footer-placeholder"></div>
+  <script>
+    fetch("footer.html")
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById("footer-placeholder").innerHTML = data;
+      });
+  </script>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
