--- a/photography.html
+++ b/photography.html
@@ -6,6 +6,21 @@
   <title>Zafaryab | Photography</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
+  <style>
+    .square-box {
+      width: 100%;
+      aspect-ratio: 1 / 1;
+      overflow: hidden;
+    }
+    
+    .square-box img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+  </style>
 </head>
 <body>
   <!-- Navbar -->
@@ -25,24 +40,39 @@
       </div>
     </div>
   </nav>
+  
+
 
   <!-- Photography Gallery -->
+  <!-- Photography Gallery Section -->
   <section class="container py-5">
-    <h2 class="mb-4"> <a href="https://instagram.com/zhaider_lens" target="_blank" class="text-dark mx-2"><i class="fab fa-instagram fa-lg"></i></a>My Photography</h2>
-    <h3>View from my Dorm Room</h3>
+    <h2 class="text-center mb-4">My Photography</h2>
     <div class="row g-3">
       <div class="col-md-4">
-        <img src="images/photo1.jpg" class="img-fluid rounded shadow-sm" alt="Photo 1">
+        <a href="images/photo1.jpg" data-lightbox="photogallery" data-title="Sunset Vibes">
+          <div class="square-box overflow-hidden">
+            <img src="images/photo1.jpg" class="img-fluid" alt="Photo 1">
+          </div>
+        </a>
       </div>
       <div class="col-md-4">
-        <img src="images/photo2.jpg" class="img-fluid rounded shadow-sm" alt="Photo 2">
+        <a href="images/photo2.jpg" data-lightbox="photogallery" data-title="Street Scene">
+          <div class="square-box overflow-hidden">
+            <img src="images/photo2.jpg" class="img-fluid" alt="Photo 2">
+          </div>
+        </a>
       </div>
       <div class="col-md-4">
-        <img src="images/photo3.jpg" class="img-fluid rounded shadow-sm" alt="Photo 3">
+        <a href="images/photo3.jpg" data-lightbox="photogallery" data-title="Quiet Moments">
+          <div class="square-box overflow-hidden">
+            <img src="images/photo3.jpg" class="img-fluid" alt="Photo 3">
+          </div>
+        </a>
       </div>
-      <!-- Add more as needed -->
+      <!-- Add more images following the same pattern -->
     </div>
   </section>
+
 
   <!--   footer -->
   <div id="footer-placeholder"></div>
@@ -56,5 +86,6 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 </body>
 </html>
