--- a/photography.html
+++ b/photography.html
@@ -13,6 +13,7 @@
       aspect-ratio: 2 / 1;
       overflow: hidden;
       border-radius: 10px;
+      border: 2px solid #000000;
     }
 
     .square-box img {
