--- a/footer.html
+++ b/footer.html
@@ -7,10 +7,10 @@
     </p>
     <p class="mb-1">
       <i class="fas fa-phone me-2"></i>
-      <a href="tel:+12077190411" class="text-white text-decoration-none">719 0411</a>
+      <a href="tel:+12077190411" class="text-white text-decoration-none">123 9876</a>
     </p>
     <p class="mb-1">
-      <i class="fas fa-map-marker-alt me-2"></i> Orono, Maine, USA
+      <i class="fas fa-map-marker-alt me-2"></i> Oslo, Paine, Aus
     </p>
     <div class="mt-2">
       <a href="https://linkedin.com/in/zafaryab" target="_blank" class="text-white mx-2"><i class="fab fa-linkedin fa-lg"></i></a>
