--- a/photography.html
+++ b/photography.html
@@ -6,6 +6,8 @@
   <title>Zafaryab Haider | Photography</title>
   <meta name="description" content="Photography portfolio of Zafaryab Haider — landscapes, street, and moments." />
 
+  <link rel="stylesheet" href="styles.css">
+
   <!-- Performance hints -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net" />
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
@@ -312,3 +314,4 @@
   </script>
 </body>
 </html>
+
