--- a/photography.html
+++ b/photography.html
@@ -6,7 +6,7 @@
   <title>Zafaryab Haider | Photography</title>
   <meta name="description" content="Photography portfolio of Zafaryab Haider — landscapes, street, and moments." />
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 
   <!-- Performance hints -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net" />
@@ -314,4 +314,5 @@
   </script>
 </body>
 </html>
+
 
