--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Zafaryab Haider | About</title>
   <meta name="description" content="Zafaryab Haider — Research Candidate (ECE), Graduate AI Consultant, and Assistant Professor. Interests: LLM security, computer vision, embedded AI." />
 
+  <link rel="stylesheet" href="css/style.css">
+
   <!-- Performance hints -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net" />
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
@@ -557,3 +559,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
