--- a/resume.html
+++ b/resume.html
@@ -7,202 +7,16 @@
   <title>Zafaryab Haider | Resume</title>
   <meta name="description" content="Zafaryab Haider — Ph.D. Candidate (ECE, UMaine). Research: LLMs, Safe & Trustworthy AI, Security." />
 
-  <link rel="stylesheet" href="css/style.css">
-
-  <!-- Performance hints -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net" />
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
-  <!-- Bootstrap + Icons -->
+  <!-- CSS (IMPORTANT ORDER) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
-
-  <style>
-    :root{
-      --ink: #0f172a;
-      --muted: #475569;
-      --soft: #f1f5f9;
-      --card: #ffffff;
-      --border: rgba(15, 23, 42, .10);
-      --brand: #2563eb;
-      --shadow: 0 10px 30px rgba(2, 6, 23, .10);
-    }
-
-    html { scroll-behavior: smooth; }
-    body{
-      color: var(--ink);
-      background: radial-gradient(1200px 600px at 15% -10%, rgba(37,99,235,.12), transparent 55%),
-                  radial-gradient(900px 500px at 85% 0%, rgba(34,197,94,.10), transparent 55%),
-                  #ffffff;
-    }
-
-    /* Navbar */
-    .navbar{
-      backdrop-filter: blur(10px);
-      background: rgba(15, 23, 42, .92) !important;
-    }
-    .navbar .nav-link{ opacity: .9; }
-    .navbar .nav-link:hover{ opacity: 1; }
-    .navbar .nav-link.active{ opacity: 1; font-weight: 600; }
-
-    /* Hero */
-    .page-hero{ padding: 3.25rem 0 1.25rem; }
-    .hero-card{
-      background: linear-gradient(180deg, rgba(255,255,255,.92), rgba(255,255,255,.78));
-      border: 1px solid var(--border);
-      border-radius: 1.25rem;
-      box-shadow: var(--shadow);
-      overflow: hidden;
-    }
-    .hero-inner{
-      padding: 2rem 1.75rem;
-      background: linear-gradient(135deg, rgba(37,99,235,.08), rgba(34,197,94,.06));
-    }
-    .kicker{
-      display: inline-flex;
-      align-items: center;
-      gap: .5rem;
-      padding: .4rem .75rem;
-      border: 1px solid var(--border);
-      border-radius: 999px;
-      font-size: .9rem;
-      color: var(--muted);
-      background: rgba(255,255,255,.7);
-    }
-    .display-title{
-      letter-spacing: -0.02em;
-      line-height: 1.05;
-      font-weight: 800;
-    }
-    .hero-muted{ color: var(--muted); }
-
-    /* Layout */
-    .section{ padding: 1.5rem 0 3rem; }
-
-    /* Left profile card */
-    .profile-card{
-      border: 1px solid var(--border);
-      border-radius: 1.25rem;
-      background: rgba(255,255,255,.9);
-      box-shadow: 0 10px 20px rgba(2,6,23,.06);
-      overflow: hidden;
-      position: sticky;
-      top: 88px; /* below navbar */
-    }
-    .profile-top{
-      padding: 1.5rem 1.25rem 1rem;
-      background: linear-gradient(135deg, rgba(37,99,235,.08), rgba(34,197,94,.06));
-      border-bottom: 1px solid var(--border);
-      text-align: center;
-    }
-    .about-photo{
-      width: 128px;
-      height: 128px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 4px solid rgba(255,255,255,.9);
-      box-shadow: 0 10px 25px rgba(2,6,23,.15);
-      margin-bottom: .75rem;
-    }
-    .profile-body{ padding: 1.25rem; }
-    .mini{
-      color: var(--muted);
-      font-size: .95rem;
-      margin-bottom: .25rem;
-    }
-    .contact-list{
-      list-style: none;
-      padding: 0;
-      margin: .75rem 0 0;
-      display: grid;
-      gap: .5rem;
-    }
-    .contact-list a{
-      color: var(--ink);
-      text-decoration: none;
-    }
-    .contact-list a:hover{ text-decoration: underline; }
-
-    .social a{
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 42px;
-      height: 42px;
-      border-radius: 999px;
-      border: 1px solid var(--border);
-      background: rgba(255,255,255,.75);
-      color: var(--ink);
-      text-decoration: none;
-      transition: transform .12s ease, box-shadow .12s ease;
-    }
-    .social a:hover{
-      transform: translateY(-2px);
-      box-shadow: 0 10px 20px rgba(2,6,23,.10);
-    }
-
-    .btn-brand{
-      background: var(--brand);
-      border-color: var(--brand);
-    }
-    .btn-brand:hover{ filter: brightness(.95); }
-
-    /* Content cards */
-    .content-card{
-      border: 1px solid var(--border);
-      border-radius: 1.25rem;
-      background: rgba(255,255,255,.92);
-      box-shadow: 0 10px 20px rgba(2,6,23,.06);
-      overflow: hidden;
-    }
-    .content-card .card-head{
-      padding: 1rem 1.25rem;
-      border-bottom: 1px solid var(--border);
-      background: rgba(241,245,249,.65);
-      display: flex;
-      align-items: center;
-      gap: .75rem;
-    }
-    .content-card .card-head .icon{
-      width: 40px;
-      height: 40px;
-      border-radius: 12px;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      background: rgba(37,99,235,.10);
-      border: 1px solid rgba(37,99,235,.18);
-      color: var(--brand);
-      flex: 0 0 auto;
-    }
-    .content-card .card-body{
-      padding: 1.25rem;
-    }
-    .content-card h3{
-      margin: 0;
-      font-weight: 800;
-      letter-spacing: -0.01em;
-      font-size: 1.05rem;
-    }
-    .muted{ color: var(--muted); }
-
-    .tight ul{ margin-bottom: 0; }
-    .tight li{ margin-bottom: .45rem; }
-
-    .badge-soft{
-      background: rgba(37,99,235,.10);
-      border: 1px solid rgba(37,99,235,.18);
-      color: var(--ink);
-      font-weight: 600;
-    }
-
-    @media (max-width: 991.98px){
-      .profile-card{ position: static; }
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body>
+<body class="page-resume">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
@@ -239,7 +53,6 @@
                 </p>
               </div>
 
-              <!-- Put your PDF in the same folder as resume.html, or update the path -->
               <div class="d-flex gap-2 flex-wrap">
                 <a class="btn btn-brand text-white" href="zafaryab_resume.pdf" target="_blank" rel="noopener">
                   <i class="fa-solid fa-download me-2"></i>Download PDF
@@ -254,11 +67,10 @@
       </div>
     </section>
 
-    <!-- Body -->
+    <!-- Body (UNCHANGED from your version) -->
     <section class="section">
       <div class="container">
         <div class="row g-4 align-items-start">
-          <!-- Left profile -->
           <div class="col-12 col-lg-4">
             <aside class="profile-card">
               <div class="profile-top">
@@ -277,7 +89,6 @@
 
                 <ul class="contact-list">
                   <li><i class="fa-solid fa-envelope me-2"></i><a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a></li>
-                  <!-- Keep your real link here (your site already uses linkedin.com/in/zafaryab elsewhere) -->
                   <li><i class="fa-brands fa-linkedin me-2"></i><a href="https://linkedin.com/in/zafaryab" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
                 </ul>
 
@@ -297,7 +108,6 @@
             </aside>
           </div>
 
-          <!-- Right content -->
           <div class="col-12 col-lg-8">
             <div class="d-grid gap-3">
 
@@ -533,16 +343,9 @@
     </section>
   </main>
 
-  <!-- Footer Placeholder (Modular) -->
   <div id="footer-placeholder"></div>
-  <script>
-    fetch("footer.html")
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById("footer-placeholder").innerHTML = data;
-      });
-  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/site.js"></script>
 </body>
 </html>
