--- a/index.html
+++ b/index.html
@@ -142,7 +142,228 @@
               </div>
             </div>
           </div>
-          <!-- (rest unchanged) -->
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-wave-square"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">Whale Call Classifier</h3>
+                  <p>Detecting endangered whale calls using deep spectrogram-based models.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-microscope"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">BEiT v2 for Cancer Imaging</h3>
+                  <p>Pre-trained masked image models for breast cancer diagnostics.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-person-cane"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">Assistive Stick</h3>
+                  <p>Smart stick for visually impaired: object detection, text-to-audio conversion.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-microchip"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">Custom OS Pong Game</h3>
+                  <p>Kernel/user-mode system calls with PS/2 hardware support.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Mobile scroll row -->
+        <div class="scroll-row d-md-none">
+          <div class="pro-card p-4">
+            <div class="d-flex align-items-start gap-3">
+              <div class="icon"><i class="fa-solid fa-people-group"></i></div>
+              <div>
+                <h3 class="h5 mb-1 fw-bold">Consensus-Based Reward</h3>
+                <p>Mitigating malicious RLHF in LLM training via consensus reward strategies.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="pro-card p-4">
+            <div class="d-flex align-items-start gap-3">
+              <div class="icon"><i class="fa-solid fa-wave-square"></i></div>
+              <div>
+                <h3 class="h5 mb-1 fw-bold">Whale Call Classifier</h3>
+                <p>Detecting endangered whale calls using deep spectrogram-based models.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="pro-card p-4">
+            <div class="d-flex align-items-start gap-3">
+              <div class="icon"><i class="fa-solid fa-microscope"></i></div>
+              <div>
+                <h3 class="h5 mb-1 fw-bold">BEiT v2 for Cancer Imaging</h3>
+                <p>Pre-trained masked image models for breast cancer diagnostics.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="pro-card p-4">
+            <div class="d-flex align-items-start gap-3">
+              <div class="icon"><i class="fa-solid fa-person-cane"></i></div>
+              <div>
+                <h3 class="h5 mb-1 fw-bold">Assistive Stick</h3>
+                <p>Smart stick for visually impaired: object detection, text-to-audio conversion.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="pro-card p-4">
+            <div class="d-flex align-items-start gap-3">
+              <div class="icon"><i class="fa-solid fa-microchip"></i></div>
+              <div>
+                <h3 class="h5 mb-1 fw-bold">Custom OS Pong Game</h3>
+                <p>Kernel/user-mode system calls with PS/2 hardware support.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- Graduate Teaching Assistant Roles -->
+    <section class="section" id="ta-roles">
+      <div class="container">
+        <div class="text-center">
+          <h2 class="section-title">Graduate Teaching Assistant Roles</h2>
+          <p class="section-subtitle">Support roles focused on hardware, logic design, and security learning.</p>
+        </div>
+
+        <div class="row g-3">
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-computer"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">Microprocessor Lab</h3>
+                  <p>Supported x86/ARM programming and hardware I/O design.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-sitemap"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">Sequential Logic Lab</h3>
+                  <p>Guided Verilog/VHDL simulation and synthesis for digital systems.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-lock"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">Cybersecurity Education</h3>
+                  <p>Helped design hands-on exercises and conceptual lectures in secure systems.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Courses Taught -->
+    <section class="section band" id="courses">
+      <div class="container">
+        <div class="text-center">
+          <h2 class="section-title">Courses Taught</h2>
+          <p class="section-subtitle">Core CS foundations + security and software development.</p>
+        </div>
+
+        <div class="row g-3">
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-shield"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">Information Security</h3>
+                  <p>Encryption, threats, and network defense fundamentals.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-diagram-project"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">Data Structures</h3>
+                  <p>Arrays, trees, graphs, heaps, and classic algorithms.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-globe"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">Internet Tools</h3>
+                  <p>Protocols, client–server models, and API integration.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-code"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">C Programming</h3>
+                  <p>Pointers, memory, debugging, and procedural design.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="pro-card p-4">
+              <div class="d-flex align-items-start gap-3">
+                <div class="icon"><i class="fa-solid fa-cubes"></i></div>
+                <div>
+                  <h3 class="h5 mb-1 fw-bold">Object-Oriented Programming</h3>
+                  <p>Java/C++ design, polymorphism, and software architecture.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
