--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
             <div class="pro-card p-4">
               <div class="d-flex align-items-start gap-3">
                 <div class="icon"><i class="fa-solid fa-people-group"></i></div>
-                <div>
-                  <h3 class="h5 mb-1 fw-bold">Consensus-Based Reward</h3>
-                  <p>Mitigating malicious RLHF in LLM training via consensus reward strategies.</p>
+                  <div>
+                    <h3 class="h5 mb-1 fw-bold">Consensus-Based Reward</h3>
+                    <p>Mitigating malicious RLHF in LLM training via consensus reward strategies.</p>
+                  </div>
               </div>
             </div>
           </div>
