--- a/photography.html
+++ b/photography.html
@@ -19,7 +19,7 @@
 
 <body class="page-photography">
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+  <nav class="navbar navbar-expand-xl navbar-dark sticky-top">
     <div class="container">
       <a class="navbar-brand fw-semibold" href="index.html">Zafaryab Haider</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
